# standup-cli

./: .gitignore  DEPLOYMENT.md  README.md  git_utils.py  main.py  parser.py  pyproject.toml  requirements.txt  setup.py  standup-cli.rb  standup_cli-0.1.0-py3-none-any.whl
.github/workflows/: publish.yml
Formula/: standup-cli.rb
standup_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
